...
                        android:paddingVertical="4dp"
                        android:text="@string/btn_mark_opened"
                        android:textSize="11sp"
                        android:visibility="gone" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDelete"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:minHeight="0dp"
                        android:minWidth="0dp"
...
